--- a/football-scores/app/src/main/res/layout/detail_fragment.xml
+++ b/football-scores/app/src/main/res/layout/detail_fragment.xml
@@ -42,7 +42,8 @@
             android:paddingLeft="120dp"
             android:paddingStart="120dp"
             android:paddingRight="120dp"
-            android:paddingEnd="120dp">
+            android:paddingEnd="120dp"
+            android:contentDescription="@null">
 
         </Button>
     </FrameLayout>
